solved layout break issues

--- a/v2-library/_src/scss/ui-elements/input.scss
+++ b/v2-library/_src/scss/ui-elements/input.scss
@@ -122,6 +122,15 @@ textarea.tutor-form-control {
 	position: relative;
 	flex-wrap: wrap;
 	width: 100%;
+
+	&.tutor-d-block {
+		display: block !important;
+	}
+
+	&.tutor-d-flex {
+		display: flex !important;
+	}
+
 	&.tutor-form-control-has-border {
 		&:not(.tutor-form-control-has-icon) {
 			input.tutor-form-control {
